--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-<div th:insert="~{/plugins/menu :: menu}"></div>
+<div th:replace="~{/plugins/menu :: menu}" class="manu"></div>
 
 <h1 class="header">Start page</h1>
 
 <ul>
-    <li th:href="@{/requests}"> - All requests -</li>
+    <li><a th:href="@{/requests?page=0&size=5&sort=id,asc}" class="button"> - All requests - </a></li>
 </ul>
 
 </body>
