--- a/src/main/resources/templates/plugins/pagination.html
+++ b/src/main/resources/templates/plugins/pagination.html
@@ -2,22 +2,26 @@
       xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="pagination_fr">
 <span th:if="${not firstVer.first AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page = 0)}">First </a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page = 0)}"
+       class="button">First </a>
 </span>
     <span th:if="${not firstVer.first AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number - 1})}"><-- Previous</a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number - 1})}"
+       class="button"><-- Previous</a>
 </span>
     <span th:if="${firstVer.totalPages > 0}"
           th:each="pageNumber : ${#numbers.sequence(0, firstVer.getTotalPages - 1, 1)}">
     <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${pageNumber})}"
        th:text="${pageNumber} + 1"
-       th:class="${pageNumber==firstVer.number + 1} ? active"></a>
+       th:class="${pageNumber==firstVer.number + 1} ? active" class="button"></a>
 </span>
     <span th:if="${not firstVer.last AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number + 1})}">Next --></a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number + 1})}"
+       class="button">Next --></a>
 </span>
     <span th:if="${not firstVer.last AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.totalPages - 1})}"> Last</a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.totalPages - 1})}"
+       class="button"> Last</a>
 </span>
 </div>
 </html>
