--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,54 +1,63 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Users</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>User</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
 </head>
+<body>
 
-<div class="container mt-5">
+<nav th:insert="~{/plugins/menu :: menu}" class="menu"></nav>
 
-    <h1>User</h1>
-    <table class="table table-sm table-bordered">
-        <thead>
-        <tr class="table-info">
-            <th scope="col">#</th>
-            <th scope="col">Email</th>
-            <th scope="col">Password</th>
-            <th scope="col">First name</th>
-            <th scope="col">Last name</th>
-            <th scope="col">Patronymic name</th>
-            <th scope="col">Contact preferences</th>
-            <th scope="col">Social media</th>
-            <th scope="col">Role</th>
-            <th scope="col">Is active</th>
-            <th colspan="2" scope="col">Action</th>
+<div class="left-side-area">
+    <h1 class="header">User</h1>
+    <h1 class="subheader">Information about the user</h1>
+
+    <a th:href="'/users/update/' + ${user.id}" class="button-active">Edit</a>
+
+</div>
+
+<div th:each="el: ${user}">
+    <table>
+        <tr>
+            <td class="text" align="right" wight="20%">Email</td>
+            <td><input type="text" th:value=${el.email} disabled></td>
         </tr>
-        </thead>
-
-        <tbody>
-        <div th:each="el: ${user}">
-            <tr>
-                <td><h5 th:text="${el.id}"/></td>
-                <td><h5 th:text="${el.email}"/></td>
-                <td><h5 th:text="${el.password}"/></td>
-                <td><h5 th:text="${el.firstName}"/></td>
-                <td><h5 th:text="${el.lastName}"/></td>
-                <td><h5 th:text="${el.patronymicName}"/></td>
-                <td><h5 th:text="${el.contactPreferences}"/></td>
-                <td><h5 th:text="${el.socialMedia}"/></td>
-                <td><h5 th:text="${el.role}"/></td>
-                <td><h5 th:text="${el.isActive}"/></td>
-                <td><a th:href="'/v1.0/user/update/' + ${el.id}" class="btn btn-warning">Edit</a></td>
-                <td><a th:href="'/v1.0/user/delete/' + ${el.id}" class="btn btn-danger">Delete</a></td>
-            </tr>
-
-        </div>
-        </tbody>
+        <tr>
+            <td class="text" align="right">Password</td>
+            <td><input type="text" th:value=${el.password} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">First name</td>
+            <td><input type="text" th:value=${el.firstName} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">Last name</td>
+            <td><input type="text" th:value=${el.lastName} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">Patronymic name</td>
+            <td><input type="text" th:value=${el.patronymicName} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">Contact preferences</td>
+            <td><input type="text" th:value=${el.contactPreferences} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right" wight="20%">Social media</td>
+            <td><input type="text" th:value=${el.socialMedia} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">Role</td>
+            <td><input type="text" th:value=${el.role} disabled></td>
+        </tr>
+        <tr>
+            <td class="text" align="right">Is active</td>
+            <td><input type="text" th:value=${el.isActive} disabled></td>
+        </tr>
 
     </table>
-
-    <a href="/v1.0/user/new" class="btn btn-success">Add user</a>
 </div>
 
 </body>
