--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,8 +3,9 @@ body{
 }
 
 .menu{
+  height: 10%;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   background: #00bfff;
@@ -13,12 +14,13 @@ body{
 
 .left-side-area{
   width: 20%;
+  height: 800px;
   display: flex;
   flex-direction: column;
-  align-content: flex-start;
   align-items: flex-end;
   float: left;
   margin-right: 3%;
+  text-align: right;
 }
 
 .header{
@@ -30,7 +32,11 @@ body{
 .subheader{
   color: black;
   font: italic bold 25px  Arial;
-  margin: 10px 0px 10px 0px;
+  margin: 15px 0px 15px 0px;
+}
+
+li {
+list-style-type: none;
 }
 
 .table{
@@ -38,19 +44,19 @@ body{
 }
 
 td, th{
-  padding: 10px;
+  padding: 5px;
 */border-left: grey 2px solid;
 }
 
 .table-header{
   background: #00bfff;
   border: grey 2px solid;
-  font: bold 20px  Arial;
+  font: bold 15px  Arial;
 }
 
 .table-data{
   border: grey 2px solid;
-  font: 15px  Arial;
+  font: 12px  Arial;
 }
 
 .button{
@@ -60,6 +66,10 @@ td, th{
 
 
 .button-active{
+  border:1px solid #ccc;
+  background:#eaeaea;
+  padding: 10px 20px;
+  text-decoration: none;
   color: black;
   border-radius: 5px;
   font: 15px  Arial;
