--- a/src/main/resources/templates/plugins/menu.html
+++ b/src/main/resources/templates/plugins/menu.html
@@ -1,28 +1,9 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-
-<nav th:fragment="menu">
-    <ul>
-        <li>
-            <img src="logo.jpg" alt="logo" style="width:50px">
-        </li>
-        <li>
-            <a class="text" href="/">Home</a>
-        </li>
-        <li>
-            <a class="text" href="/users">Users</a>
-        </li>
-        <li>
-            <a class="text" href="/courses">Courses</a>
-        </li>
-        <li>
-            <a class="text" href="/requests">Requests</a>
-        </li>
-        <li>
-            <p class="text" style="width:50%"></p>
-        </li>
-        <li>
-            <a class="text" href="/login">Sign in | Sign up</a>
-        </li>
-    </ul>
+<nav th:fragment="menu" class="menu">
+    <img src="logo.jpg" alt="logo" style="width:50px">
+    <p><a class="text" href="/">Home</a></p>
+    <p><a class="text" href="/users">Users</a></p>
+    <p><a class="text" href="/courses">Courses</a></p>
+    <p><a class="text" href="/requests">Requests</a></p>
+    <p class="text" style="width:50%"></p>
+    <p><a class="text" href="/login">Sign in | Sign up</a></p>
 </nav>
