LMS-7: Create new branch

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,8 @@
-body{
+body {
   font-family: Sans-serif;
 }
 
-.menu{
+.menu {
   height: 10%;
   display: flex;
   flex-direction: row;
@@ -12,7 +12,7 @@ body{
   margin: 0px 0px 50px 0px;
 }
 
-.left-side-area{
+.left-side-area {
   width: 20%;
   height: 800px;
   display: flex;
@@ -23,13 +23,13 @@ body{
   text-align: right;
 }
 
-.header{
+.header {
   color: #00bfff;
   font: italic bold 40px Arial;
   margin: 15px 0px 15px 0px;
   }
 
-.subheader{
+.subheader {
   color: black;
   font: italic bold 25px  Arial;
   margin: 15px 0px 15px 0px;
@@ -39,33 +39,32 @@ li {
 list-style-type: none;
 }
 
-.table{
+.table {
   border-collapse:collapse;
 }
 
-td, th{
+td, th {
   padding: 5px;
 */border-left: grey 2px solid;
 }
 
-.table-header{
+.table-header {
   background: #00bfff;
   border: grey 2px solid;
   font: bold 15px  Arial;
 }
 
-.table-data{
+.table-data {
   border: grey 2px solid;
   font: 12px  Arial;
 }
 
-.button{
+.button {
   color: black;
   border-radius: 5px;
 }
 
-
-.button-active{
+.button-active {
   border:1px solid #ccc;
   background:#eaeaea;
   padding: 10px 20px;
@@ -76,34 +75,33 @@ td, th{
   margin: 20px 0px 20px 0px;
 }
 
-
-.button-readonly{
+.button-readonly {
   border-radius: 5px;
   font: 15px  Arial;
   margin: 20px 0px 20px 0px;
 }
 
-input{
+input {
   font: 15px  Arial;
   margin: 20px 0px 20px 0px;
 }
 
-input:focus{
+input:focus {
   color: #00bfff;
 }
 
-input:disabled{
+input:disabled {
 }
 
-.text{
+.text {
   font: italic 15px  Arial;
 }
 
-.subscript{
+.subscript {
   font-size: smaller;
 }
 
-#popup{
+#popup {
   width: 200px;
   font: 13px  Arial;
   padding: 15px;
@@ -115,4 +113,29 @@ input:disabled{
 
 #popup:target {
   display: block;
+}
+
+i.fa-solid.fa-graduation-cap {
+color: #0000FF;
+}
+
+i.fa-solid.fa-eye {
+color: #00FF00;
+}
+
+i.fa-solid.fa-file-pen {
+color: #FFD700;
+}
+
+i.fa-solid.fa-trash-can {
+color: #FF0000;
+}
+
+ul.hl li {
+display: inline;
+margin-right: 10px;
+}
+
+.center {
+text-align: center;
 }
