--- a/src/main/resources/templates/course/courses-list.html
+++ b/src/main/resources/templates/course/courses-list.html
@@ -6,6 +6,9 @@
     <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 <body>
+
+<nav th:replace="~{/plugins/menu :: menu}" ></nav>
+
 <div class="left-side-area">
     <h1 class="header">Courses</h1>
     <h1 class="subheader">List Of All Courses</h1>
