LMS-15: move main.css to App_Web

--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -45,7 +45,7 @@ list-style-type: none;
 
 td, th{
   padding: 5px;
-*/border-left: grey 2px solid;
+  border-left: grey 2px solid;
 }
 
 .table-header{
