LMS-36 Delete "/" in path to plugins

--- a/App_Web/src/main/resources/templates/request.html
+++ b/App_Web/src/main/resources/templates/request.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<nav th:replace="~{/plugins/menu :: menu}" class="menu"></nav>
+<nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
 
 <div class="left-side-area">
     <h1 class="header">View</h1>
