--- a/App_Web/src/main/resources/templates/index.html
+++ b/App_Web/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div th:replace="~{/plugins/menu :: menu}" class="manu"></div>
+<div th:replace="~{plugins/menu :: menu}" class="manu"></div>
 
 <h1 class="header">Start page</h1>
 
