LMS-25 Created "homeworks.html", moved "homework.html" to AppWeb, temporary added Homeworks to menu.
Needed to add pagination

--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -4,6 +4,8 @@
     <p><a class="text" href="/users">Users</a></p>
     <p><a class="text" href="/courses">Courses</a></p>
     <p><a class="text" href="/requests">Requests</a></p>
+    <p><a class="text" href="/homeworks">Homeworks</a></p>
+
     <p class="text" style="width:50%"></p>
     <p><a class="text" href="/login">Sign in | Sign up</a></p>
 </nav>
