--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -14,7 +14,8 @@ body{
 
 .left-side-area{
   width: 20%;
-  height: 800px;
+  min-width: 220px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
