--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/fontawesome/icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<p th:text="${homework.id}">ID</p>
-<p th:text="${homework.student}">Student</p>
-<p th:text="${homework.comment}">Comment</p>
-<p th:text="${homework.fileLink}">File link</p>
-<p th:text="${homework.mark}">Mark</p>
+<nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
+<div class="left-side-area">
+    <h1 class="header">Show</h1>
+    <h2>Homework</h2>
+    <!--    <h3><a th:href="@{requests/create}" class="button">Create request</a></h3>-->
+</div>
+<div class="main-area">
+    <h4>Full student name</h4>
+    <p th:text="${homework.student.firstName} + ' ' + ${homework.student.lastName} + ' ' + ${homework.student.patronymicName} ">
+        Full name</p>
+    <h4>Comment</h4>
+    <p th:text="${homework.comment}">Comment</p>
+    <h4>Filelink (temp info)</h4>
+    <p th:text="${homework.fileLink}">File link</p>
+    <h4>Homework mark</h4>
+    <p th:text="${homework.mark}">Mark</p>
+</div>
 </body>
 </html>
