LMS-25 Add class "main-area" to CSS, add "min-widt".

--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -24,6 +24,10 @@ body{
   text-align: right;
 }
 
+.main-area {
+  min-width: 800px;
+}
+
 .header {
   color: #00bfff;
   font: italic bold 40px Arial;
