LMS-25 Add button for calling "create-homework.html".

--- a/App_Web/src/main/resources/templates/homeworks.html
+++ b/App_Web/src/main/resources/templates/homeworks.html
@@ -10,7 +10,7 @@
 <div class="left-side-area">
     <h1 class="header">Show</h1>
     <h2>Homeworks</h2>
-    <!--    <h3><a th:href="@{requests/create}" class="button">Create request</a></h3>-->
+    <h3><a th:href="@{/homeworks/createForm}" class="button">Create homework</a></h3>
 </div>
 <div class="main-area">
     <div>
