LMS-25 Add button "Back" on "homework".

--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -10,7 +10,8 @@
 <div class="left-side-area">
     <h1 class="header">Show</h1>
     <h2>Homework</h2>
-    <!--    <h3><a th:href="@{requests/create}" class="button">Create request</a></h3>-->
+    <h3><a href="#" onclick="history.back();return false;" class="history-back">
+        <-Back</a></h3>
 </div>
 <div class="main-area">
     <h4>Full student name</h4>
