LMS-25 Corrected "plugins/menu" in "update-homework.html", refactored "HomeworkWebController".
Delete "homework" in list is not work.  Button "Submit" on "create-homework.html" is not work.

--- a/App_Web/src/main/resources/templates/update-homework.html
+++ b/App_Web/src/main/resources/templates/update-homework.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<nav th:replace="~{/plugins/menu :: menu}"></nav>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
 
 <div class="left-side-area">
     <h1 class="header">Update homework</h1>
