--- a/App_Web/src/main/resources/templates/request.html
+++ b/App_Web/src/main/resources/templates/request.html
@@ -13,18 +13,27 @@
 <div class="left-side-area">
     <h1 class="header">View</h1>
     <h2>Request number: <span th:text="${request.id}"></span></h2>
+    <a th:href="@{/requests/update/__${request.id}__}" class="button-active">Edit request</a>
 </div>
+
 <div class="main-area">
-    <ul>
-        <li th:text="${request.user.firstName} + ' ' + ${request.user.lastName}">User</li>
-        <li th:text="${request.course.title}">Title course<</li>
-        <li th:text="${request.status}">Status<</li>
-    </ul>
+    <table>
+        <tr>
+            <td>User name</td>
+            <td><input type="text" th:value="${request.user.firstName} + ' ' + ${request.user.lastName}" disabled></td>
+        </tr>
+        <tr>
+            <td>Curse</td>
+            <td><input type="text" th:value=${request.course.title} disabled></td>
+        </tr>
+        <tr>
+            <td>Status</td>
+            <td><input type="text" th:value=${request.status} disabled></td>
+        </tr>
+    </table>
 </div>
 
-<a th:href="@{/requests/update/__${request.id}__}" class="button">Edit request</a>
-
-<a href="#" onclick="history.back();return false;" class="button">
+<a href="#" onclick="history.back();return false;" class="button-active">
     <-Back</a>
 </body>
 </html>
