--- a/App_Web/src/main/resources/templates/requests.html
+++ b/App_Web/src/main/resources/templates/requests.html
@@ -13,7 +13,7 @@
 <div class="left-side-area">
     <h1 class="header">Show</h1>
     <h2>Requests</h2>
-    <h3><a th:href="@{requests/create}" class="button">Create request</a></h3>
+    <h3><a th:href="@{requests/create}" class="button-active">Create request</a></h3>
 </div>
 <div class="main-area">
     <div>
@@ -29,21 +29,20 @@
 
     <table class="table">
         <tr class="table-header">
-            <th>View</th>
-            <th>Change</th>
-            <th>Delete</th>
+            <th></th>
+            <th></th>
+            <th></th>
             <th>Users</th>
             <th>Courses</th>
             <th>Status</th>
             <th>Actions</th>
         </tr>
         <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
-            <td><a th:href="@{/requests/__*{id}__}" class="button">View</a></td>
-            <td><a th:href="@{/requests/update/__*{id}__}" class="button">Change</a></td>
+            <td><a th:href="@{/requests/__*{id}__}" class="button">E</a></td>
+            <td><a th:href="@{/requests/update/__*{id}__}" class="button">/</a></td>
             <td></td>
-            <td th:text="*{user.firstName} + ' ' + *{user.lastName}"><a th:href="@{/users/__*{id}__}" class="button">User</a>
-            </td>
-            <td><a th:href="@{/courses/__*{id}__}" th:text="*{course.title}" class="button">Course title</a></td>
+            <td><a th:href="@{/users/__*{id}__}" th:text="*{user.firstName} + ' ' + *{user.lastName}">User</a></td>
+            <td><a th:href="@{/courses/__*{id}__}" th:text="*{course.title}">Course title</a></td>
             <td th:text="*{status}"></td>
             <td></td>
         </tr>
