LMS-39: Modify CSS classes in error.html & pagination.html

--- a/App_Web/src/main/resources/templates/error.html
+++ b/App_Web/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 <body>
 <h1 class="header">Sorry, Error...</h1>
 <h3 th:text="${message} == null ? 'Something went wrong...' : ${message}"></h3>
-<a href="#" onclick="history.back();return false;" class="history-back">
+<a href="#" onclick="history.back();return false;" class="button-active">
     <-Back</a>
 </body>
 </html>
