--- a/App_Web/src/main/resources/templates/update-homework.html
+++ b/App_Web/src/main/resources/templates/update-homework.html
@@ -13,28 +13,34 @@
 <div class="left-side-area">
     <h1 class="header">Update homework</h1>
     <h1 class="subheader">Changing homework information</h1>
+    <h3><a href="#" onclick="history.back();return false;" class="history-back">
+        <-Back</a></h3>
 
 </div>
 
-<div>
-    <form th:action="'/homeworks/update' + ${homework.id}" method="post">
-
-        <p><label for="email">Email address:</label><br></p>
-        <p><input id="email" type="text" th:value=${homework.email}><br></p>
-
-        <p><label for="filelink">Add your homework file here:</label><br></p>
-        <p><input id="filelink" type="file" th:value=${homework.fileLink} name="fileLink"><br></p>
-
-        <textarea id="content" name="content" cols="60" rows="5" th:value=${homework.comment}></textarea>
-
-        <p><input placeholder="Your mark..." type="text" name="mark"> Mark <br></p>
-
-        <p><input placeholder="Write some comment..." type="text" name="comment"> Trainer comment <br></p>
-
-        <input type="hidden" th:value=${homework.student}><br>
-        <p><input type="submit" value="Save changes">
-            <input type="reset" value="Reset">
-        </p>
+<div class="main-area">
+    <form th:action="'/homeworks/update/' + ${homework.id}" method="post">
+        <table>
+            <tr>
+                <td class="text" align="right" wight="20%">Full name</td>
+                <td><input type="text" th:value="${homework.student.firstName} + ' '
+                + ${homework.student.lastName} + ' '
+                + ${homework.student.patronymicName} "></td>
+            </tr>
+            <tr>
+                <td class="text" align="right">Comment</td>
+                <td><input type="text" th:value=${homework.comment} name="comment"></td>
+            </tr>
+            <tr>
+                <td class="text" align="right">File link</td>
+                <td><input type="text" th:value=${homework.fileLink} name="fileLink"></td>
+            </tr>
+            <tr>
+                <td class="text" align="right">Mark</td>
+                <td><input type="text" th:value=${homework.mark} name="mark"></td>
+            </tr>
+        </table>
+        <button type="submit" class="button-active">Save</button>
     </form>
 </div>
 
