LMS-10: Add pagination, refactor

--- a/App_Web/src/main/resources/templates/lesson/lessons.html
+++ b/App_Web/src/main/resources/templates/lesson/lessons.html
@@ -53,6 +53,9 @@
         </th:block>
         </tbody>
     </table>
+    <div th:insert="~{/plugins/pagination :: pagination_fr}"
+         th:with="firstVer=${courses}">
+    </div>
 </div>
 </body>
 </html>
