LMS-10: refactor courses.html

--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -33,7 +33,7 @@
             <th:block th:each="course : ${courses}">
                 <tr>
                     <td>
-                        <a th:href="'/courses/read/' + ${course.id}">
+                        <a th:href="'/courses/' + ${course.id}">
                             <i class="fa-solid fa-eye"></i></a>
                     </td>
                     <td>
