--- a/App_Web/src/main/resources/templates/update-homework.html
+++ b/App_Web/src/main/resources/templates/update-homework.html
@@ -19,24 +19,24 @@
 </div>
 
 <div class="main-area">
-    <form th:action="'/homeworks/update/' + ${homework.id}" method="post">
+    <form th:action="'/homeworks/update/' + ${homework.id}" method="put">
         <table>
             <tr>
-                <td class="text" align="right" wight="20%">Full name</td>
+                <td class="text">Full name</td>
                 <td><input type="text" th:value="${homework.student.firstName} + ' '
                 + ${homework.student.lastName} + ' '
                 + ${homework.student.patronymicName} "></td>
             </tr>
             <tr>
-                <td class="text" align="right">Comment</td>
+                <td class="text">Comment</td>
                 <td><input type="text" th:value=${homework.comment} name="comment"></td>
             </tr>
             <tr>
-                <td class="text" align="right">File link</td>
-                <td><input type="text" th:value=${homework.fileLink} name="fileLink"></td>
+                <td class="text">File link</td>
+                <td><input type="text" th:value=${homework.fileLink.link} name="fileLink"></td>
             </tr>
             <tr>
-                <td class="text" align="right">Mark</td>
+                <td class="text">Mark</td>
                 <td><input type="text" th:value=${homework.mark} name="mark"></td>
             </tr>
         </table>
