LMS-39: Add "this page" span

--- a/App_Web/src/main/resources/templates/plugins/pagination.html
+++ b/App_Web/src/main/resources/templates/plugins/pagination.html
@@ -23,5 +23,6 @@
     <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.totalPages - 1})}"
        class=""> Last</a>
 </span>
+    <span th:text="'This page = ' + ${firstVer.number + 1}">This now</span>
 </div>
 </html>
