--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -7,5 +7,7 @@
     <p><a class="text" href="/homeworks">Homeworks</a></p>
 
     <p class="text" style="width:50%"></p>
-    <p><a class="text" href="/login">Sign in | Sign up</a></p>
+        <a href="/login">Sign in | </a>
+        <a href="/auth/registration">Sign up | </a>
+        <a href="/logout">Logout</a>
 </nav>
