--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -54,7 +54,7 @@
             </th:block>
             </tbody>
         </table>
-        <div th:insert="~{/plugins/pagination :: pagination_fr}"
+        <div th:insert="~{plugins/pagination :: pagination_fr}"
              th:with="firstVer=${courses}">
         </div>
     </div>
