--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -6,10 +6,25 @@ body{
   height: 10%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background: #00bfff;
   margin: 0 0 50px 0;
+}
+
+.menu-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 0 0 15px;
+}
+
+.menu-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .left-side-area{
@@ -50,7 +65,6 @@ list-style-type: none;
 
 td, th{
   padding: 5px;
-  border-left: grey 2px solid;
 }
 
 .table-header{
@@ -102,6 +116,7 @@ input:disabled{
 
 .text{
   font: italic 15px  Arial;
+  margin: 0 15px 0 15px;
 }
 
 .subscript{
